# latam-data-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  latam-data-mcp.mcpb  pyproject.toml  render.yaml  requirements.txt  server.json  server.py
.github/workflows/: publish.yml
assets/: banner-readme.html  banner.html  make_logo.py
docs/: DISTRIBUTION.md  launch-article-es.md  launch-article.md
latam_data/: __init__.py  apis.py  bank.py  phone.py  validators.py
latam_data_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: dashboard.py  dashboard_live.py  growth.py
tests/: test_bank.py  test_hardening.py  test_live_apis.py  test_mcp_layer.py  test_phone.py  test_validators.py
