[project]
name = "latam-data-mcp"
version = "0.6.0"
description = "MCP server giving AI agents reliable access to Latin American data: tax-ID validation, indicators, FX, company lookups, holidays"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sebastián von Koeller" }]
keywords = ["mcp", "model-context-protocol", "latam", "latin-america", "tax-id", "fintech"]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
]

[project.scripts]
latam-data-mcp = "server:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = ["live: tests that hit real upstream APIs (deselect with '-m \"not live\"')"]
addopts = "-m 'not live'"

[tool.setuptools]
packages = ["latam_data"]
py-modules = ["server"]
